--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -207,6 +207,7 @@
                         app:cardElevation="3dp">
 
                         <LinearLayout
+                            android:id="@+id/equipoLinearLayout"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical">
