--- a/app/src/main/res/layout/activity_agregar_equipo.xml
+++ b/app/src/main/res/layout/activity_agregar_equipo.xml
@@ -42,4 +42,19 @@
         android:layout_marginTop="74dp"
         android:text="Agregar Equipo" />
 
+    <LinearLayout
+        android:id="@+id/teamsLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/buttonAddTeam"
+        android:padding="16dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewTeams"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
