--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -179,7 +179,7 @@
                                 android:background="@drawable/background_oval_2">
 
                                 <ImageView
-                                    android:id="@+id/imageView2"
+                                    android:id="@+id/fotoPerfil"
                                     android:layout_width="30dp"
                                     android:layout_height="30dp"
                                     app:layout_constraintBottom_toBottomOf="parent"
