--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,19 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
-                        android:text="Hola, Mario"
+                        android:text="Hola,"
+                        android:textColor="@color/white"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/imageView20"
+                        app:layout_constraintTop_toTopOf="@+id/imageView20" />
+
+                    <TextView
+                        android:id="@+id/textoNombreUsuario"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="92dp"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -349,7 +361,7 @@
                         app:srcCompat="@drawable/magnifying_glass_solid" />
 
                     <TextView
-                        android:id="@+id/textView6"
+                        android:id="@+id/textNombreUsuario"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Buscar"
@@ -373,7 +385,7 @@
                         app:srcCompat="@drawable/comment_solid" />
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/textCorreo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Chat"
